--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function myFunction() {
   </div>
 </div>
 <div class="footer">
-  <p>copy rights reserved. <a href="https://www.facebook.com/aryan.dino.5/" target="_blank" class="fa fa-facebook"><a href="https://mail.google.com/mail/u/0/?tab=wm&pli=1#inbox?compose=new" target="_blank" class="fa fa-google"></p></a>
+  <p>copy rights reserved. <a href="https://www.facebook.com/aryan.dino.5/" target="_blank" class="fa fa-facebook"><a href="https://mail.google.com/mail/u/0/?tab=wm&pli=1#inbox?compose=new" target="_blank" class="fa fa-envelope"></p></a>
 </div>
 </body>
 </html>
